--- a/index.html
+++ b/index.html
@@ -4,5 +4,16 @@
 <script type="module" src = "main.js">
 </script>
 <html lang="en">
+
+<body>
+    <meta charset="UTF-8" />
+    <style>
+        body { margin: 0;
+            padding: 0;
+            overflow: hidden; }
+        canvas { display: block; 
+            overflow: hidden;}
+    </style>
+</body>
     <canvas id="Canvas"></canvas>
 </html>
