--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <style>
         body { margin: 0;
             padding: 0;
-            overflow: hidden; }
+            overflow: hidden;
+            scroll-behavior: none; }
         canvas { display: block; 
             overflow: hidden;}
     </style>
