--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             overflow: hidden;
  }
         canvas { display: block; 
+            position:fixed;
+            top:0;
+            left:0;
+            right: 0;
+            bottom: 0;
             overflow: hidden;}
     </style>
 </body>
