--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
             padding: 0;
             overflow: hidden;
         }
+        canvas { display: block; 
+            position:fixed;
+            top:0;
+            left:0;
+            right: 0;
+            bottom: 0;
+            overflow: hidden;
+            width: 100vw;
+            height: 100vh;
+        }
     </style>
 </body>
     <canvas id="Canvas"></canvas>
